✨ FEAT: visualization을 위한 seg map.csv와 dice.csv 생성 구현

--- a/etc/visualization/visualization.ipynb
+++ b/etc/visualization/visualization.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,8 +11,15 @@
     "import numpy as np\n",
     "from PIL import Image\n",
     "import cv2\n",
-    "import matplotlib.pyplot as plt\n",
-    "\n",
+    "import matplotlib.pyplot as plt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "CLASSES = [\n",
     "    'finger-1', 'finger-2', 'finger-3', 'finger-4', 'finger-5',\n",
     "    'finger-6', 'finger-7', 'finger-8', 'finger-9', 'finger-10',\n",
@@ -153,6 +160,346 @@
     "\n",
     "visualize_all_images_with_segmentations()\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 학습 이미지 중에서 잘 분류하지 못하는 것들은 무엇이 있을까?\n",
+    "\n",
+    "train dataset으로 결과를 확인해보자!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "img_path = \"../../data/train/DCM\"\n",
+    "label_path = \"../../data/train/outputs_json\"\n",
+    "top_k = 5\n",
+    "config_path = \"../../outputs/dev_smp_unet_kh\"\n",
+    "pth_path = \"../../outputs/dev_smp_unet_kh/smp_unet_best_model.pth\"\n",
+    "threshold = 0.5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/conda/lib/python3.10/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n",
+      "/opt/conda/lib/python3.10/site-packages/albumentations/__init__.py:13: UserWarning: A new version of Albumentations is available: 1.4.21 (you have 1.4.18). Upgrade using: pip install -U albumentations. To disable automatic update checks, set the environment variable NO_ALBUMENTATIONS_UPDATE to 1.\n",
+      "  check_for_updates()\n"
+     ]
+    }
+   ],
+   "source": [
+    "import sys\n",
+    "import os\n",
+    "sys.path.append(\"/data/ephemeral/home/kwak/level2-cv-semanticsegmentation-cv-18-lv3\")\n",
+    "from src.models.model_utils import *\n",
+    "from src.datasets.dataset import XRayDataset\n",
+    "from src.utils.augmentation import get_transform\n",
+    "from src.utils.metrics import get_metric_function\n",
+    "from torch.utils.data import Dataset, DataLoader, Subset\n",
+    "from src.utils.rle_convert import encode_mask_to_rle\n",
+    "import pandas as pd\n",
+    "import torch.nn.functional as F\n",
+    "import glob\n",
+    "from tqdm import tqdm\n",
+    "import yaml\n",
+    "\n",
+    "def get_config(config_folder):\n",
+    "    config = {}\n",
+    "\n",
+    "    config_folder = os.path.join(config_folder,'*.yaml')\n",
+    "    \n",
+    "    config_files = glob.glob(config_folder)\n",
+    "    \n",
+    "    for file in config_files:\n",
+    "        with open(file, 'r') as f:\n",
+    "            config.update(yaml.safe_load(f))\n",
+    "    \n",
+    "    if config['device'] == 'cuda' and not torch.cuda.is_available():\n",
+    "        print('using cpu now...')\n",
+    "        config['device'] = 'cpu'\n",
+    "\n",
+    "    return config\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "데이터셋 받아오기"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "config = get_config(config_path)\n",
+    "\n",
+    "classes = config['classes']\n",
+    "CLASS2IND = {v: i for i, v in enumerate(classes)}\n",
+    "IND2CLASS = {v: k for k, v in CLASS2IND.items()}\n",
+    "\n",
+    "transform = get_transform(config['data'], is_train=False)\n",
+    "\n",
+    "_dataset = XRayDataset(\n",
+    "    image_root=img_path,\n",
+    "    label_root=label_path,\n",
+    "    classes=config['classes'],\n",
+    "    mode='val',\n",
+    "    transforms=transform\n",
+    ")\n",
+    "\n",
+    "_dataloader = DataLoader(\n",
+    "    _dataset,\n",
+    "    batch_size=8,\n",
+    "    shuffle=False,\n",
+    "    num_workers=4,\n",
+    "    drop_last=False\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "모델 불러오기"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "device = torch.device(config['device'])\n",
+    "model = get_model(config['model'], config['classes']).to(device)\n",
+    "\n",
+    "checkpoint = torch.load(pth_path, map_location=device)\n",
+    "model.load_state_dict(checkpoint['model_state_dict'])\n",
+    "\n",
+    "criterion = get_criterion(config['train']['criterion']['name'])\n",
+    "metric_fn = get_metric_function(config['train']['metric']['name'])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Segmentation 수행하기"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "calculating: 100%|██████████| 20/20 [09:57<00:00, 29.88s/it]\n"
+     ]
+    }
+   ],
+   "source": [
+    "total_loss = 0\n",
+    "dice_list = []\n",
+    "\n",
+    "rles = []\n",
+    "gt_rles = []\n",
+    "filename_and_class = []\n",
+    "\n",
+    "with torch.no_grad():\n",
+    "    for i, batch in enumerate(tqdm(_dataloader, desc=\"calculating\")):\n",
+    "        inputs, masks = batch\n",
+    "        inputs, masks = inputs.to(device), masks.to(device)\n",
+    "        \n",
+    "        outputs = model(inputs)\n",
+    "        \n",
+    "        if isinstance(outputs, tuple):\n",
+    "                logits, logits1, logits2 = outputs\n",
+    "                use_multiple_outputs = True\n",
+    "        else: \n",
+    "            logits = outputs['out'] if isinstance(outputs, dict) and 'out' in outputs else outputs\n",
+    "            use_multiple_outputs = False\n",
+    "\n",
+    "        logits_h, logits_w = logits.size(-2), logits.size(-1)\n",
+    "        labels_h, labels_w = masks.size(-2), masks.size(-1)\n",
+    "\n",
+    "        #출력과 레이블의 크기가 다른 경우 출력 텐서를 레이블의 크기로 보간\n",
+    "        if logits_h != labels_h or logits_w != labels_w:\n",
+    "            logits = F.interpolate(logits, size=(labels_h, labels_w), mode=\"bilinear\", align_corners=False)\n",
+    "            if use_multiple_outputs:\n",
+    "                logits1 = F.interpolate(logits1, size=(labels_h, labels_w), mode=\"bilinear\", align_corners=False)\n",
+    "                logits2 = F.interpolate(logits2, size=(labels_h, labels_w), mode=\"bilinear\", align_corners=False)\n",
+    "\n",
+    "        probs = torch.sigmoid(logits)\n",
+    "        # threshold 추가해서 기준 치 이상만 label로 분류 \n",
+    "        # outputs = (probs > threshold).detach().cpu()\n",
+    "        # masks = masks.detach().cpu()\n",
+    "        outputs = (probs > threshold)\n",
+    "        dice = metric_fn.calculate(outputs, masks).detach().cpu()\n",
+    "        \n",
+    "        dice_list.append(dice)\n",
+    "        \n",
+    "        # pd에 저장하기 위함\n",
+    "        outputs = outputs.detach().cpu().numpy()\n",
+    "        masks = masks.detach().cpu().numpy()\n",
+    "        \n",
+    "        for idx, (output, mask) in enumerate(zip(outputs, masks)):\n",
+    "            file_path, _ = _dataset.get_filepath(idx*i)\n",
+    "            \n",
+    "            for c, (seg_m, gt_m) in enumerate(zip(output, mask)):\n",
+    "                rle = encode_mask_to_rle(seg_m)\n",
+    "                gt_rle = encode_mask_to_rle(gt_m)\n",
+    "                rles.append(rle)\n",
+    "                gt_rles.append(gt_rle)\n",
+    "                filename_and_class.append(f\"{IND2CLASS[c]}:{file_path}\")\n",
+    "\n",
+    "classes, file_path = zip(*[x.split(\":\") for x in filename_and_class])\n",
+    "df_pred = pd.DataFrame({\n",
+    "    \"file_path\": file_path,\n",
+    "    \"class\": classes,\n",
+    "    \"rle\": rles,\n",
+    "    \"gt_rle\": gt_rles,\n",
+    "})\n",
+    "\n",
+    "# dice_list = sorted(dice_list, key=lambda x: (-x, x))\n",
+    "\n",
+    "dices = torch.cat(dice_list, 0)\n",
+    "\n",
+    "dices_per_img = torch.mean(dices, 1)\n",
+    "\n",
+    "file_path, _ = _dataset.get_all_path()\n",
+    "df_dice = pd.DataFrame(dices, columns=[IND2CLASS[i] for i in range(29)])\n",
+    "df_dice.insert(0, \"file_path\", file_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "vis_csv_path = os.path.join(config_path, \"vis_csv\")\n",
+    "df_pred_path = os.path.join(vis_csv_path, \"pred.csv\")\n",
+    "df_dice_path = os.path.join(vis_csv_path, \"dice.csv\")\n",
+    "\n",
+    "os.makedirs(vis_csv_path, exist_ok=True)\n",
+    "\n",
+    "df_pred.to_csv(df_pred_path, index=False)\n",
+    "df_dice.to_csv(df_dice_path, index=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "그 중 dice score 값이 제일 낮은 결과값들 가져오기"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "values, indices = torch.topk(dices_per_img, k=top_k, largest=False)\n",
+    "values, indices"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sorted_indices = torch.argsort(dices_per_img)\n",
+    "indices_ = sorted_indices[:10]\n",
+    "\n",
+    "l_v = dices_per_img[indices_]\n",
+    "l_v"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor(0.0067)\n",
+      "('ID070/image1661736042863.png', 'ID070/image1661736042863.json')\n",
+      "tensor(0.0068)\n",
+      "('ID444/image1666144319702.png', 'ID444/image1666144319702.json')\n",
+      "tensor(0.0069)\n",
+      "('ID506/image1666747111320.png', 'ID506/image1666747111320.json')\n",
+      "tensor(0.0070)\n",
+      "('ID480/image1666661091576.png', 'ID480/image1666661091576.json')\n",
+      "tensor(0.0070)\n",
+      "('ID004/image1661144724044.png', 'ID004/image1661144724044.json')\n"
+     ]
+    }
+   ],
+   "source": [
+    "for v, i in zip(values, indices):\n",
+    "    print(v)\n",
+    "    print(_dataset.get_filepath(i))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([ 23, 119, 145, 135,   3, 131,  27, 144, 147,  45, 155,  97,  29,  25,\n",
+       "        115,  11,  13,   1, 149, 153, 151,  15,  57,  83, 137,  75, 154,  51,\n",
+       "         91,  49,  21,  17,  71,  56, 123,  73,  33, 157,  39, 129, 103,   5,\n",
+       "         95,  44,  31,   2, 139,  54, 133,  61, 152,  41, 159,  22,  19,  89,\n",
+       "         35, 111,  10,  55, 121, 117,  59,  37, 107, 118,  87, 130,  99,  43,\n",
+       "        150,   0,  96,  24, 141, 125, 146, 134,  12,  53, 105,  26, 114,   7,\n",
+       "         74,   9, 148,  47,  32,  63, 127,  50,  30,  77,  90, 138,  81,  60,\n",
+       "         67,  34,  42, 143,  79,  69, 136, 101,  58,  28, 128, 116,  62,  72,\n",
+       "        158,   6, 120,  85,  48,  94,  14,  65,  20, 142,  16,  52, 109,  86,\n",
+       "        102,  82,  40, 122, 126, 140,  70,   4, 106, 132,   8,  38, 110,  80,\n",
+       "        124,  66,  68,  88,  46, 108, 100, 113, 156,  64,  18,  36,  93,  76,\n",
+       "         84, 112,  78,  98,  92, 104])"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sorted_indices"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
