✨ FEAT: ensemble 만들기 (#89)
* ✨ FEAT: ensemble 만들기
Fixes #82

* ♻️ [REFACTOR] Vis 출력물 삭제

--- a/etc/visualization/visualization.ipynb
+++ b/etc/visualization/visualization.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,14 +35,14 @@
     "    (0, 125, 92), (209, 0, 151), (188, 208, 182), (0, 220, 176),\n",
     "]\n",
     "\n",
-    "csv_path=\"../../outputs/output_baseline_100ep.csv\"\n",
+    "csv_path=\"../../outputs/ensemble_soft_output.csv\"\n",
     "output_dir=\"./segmentation_visualizations\"\n",
     "base_image_dir=\"../../data/test\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,6 +88,8 @@
     "        \n",
     "        for _, row in group.iterrows():\n",
     "            class_name, rle = row['class'], row['rle']\n",
+    "            if pd.isna(rle):\n",
+    "                continue\n",
     "            decoded_mask = rle_decode(rle, (height, width))\n",
     "            mask[CLASS2IND[class_name]] = decoded_mask\n",
     "        \n",
